# ChemotionApi

./: .gitignore  README.md  config.json.sample  main.py  pyproject.toml  utils.py
chemotion_api/: __init__.py  api_fetcher.py  collection.py  connection.py  element_manager.py  generic_elements.py  generic_segments.py  user.py  utils.py
chemotion_api/admin/: __init__.py
chemotion_api/elements/: __init__.py  abstract_element.py  generic_element.py  reaction.py  research_plan.py  sample.py  wellplate.py
chemotion_api/elements/empty_elements/: reaction.json  sample.json
docs/: conf.py
docs/_build/doctrees/: Collection.doctree  Instance.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  Collection.html  Instance.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: Collection.rst.txt  Instance.rst.txt  index.rst.txt
examples/: main.py  utils.py
tests/: conftest.py  test_collection.py  test_generic.py  test_instance.py  test_reaction.py  test_sample.py  test_segments.py  test_user.py  test_wellplate.py
