[tool.poetry]
name = "chemotion-api"
version = "0.1.0"
description = "A Chemotion python API"
authors = ["Maritn Starman <martin.starman@kit.edu>"]
license = "MIT"
readme = "README.md"

packages = [{include = "chemotion_api"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
